--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 Classer par ordre alphanumérique
 Donner la catégorie
 Faire en sorte que l'en-tête reste visible
+un lien vers le fichier de base
+l'éditeur
