--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
-Classer par ordre alphanumérique
+[x] Classer par ordre alphanumérique
+Cliquer pour classer par auteur...
 Donner la catégorie
-Faire en sorte que l'en-tête reste visible
+[x] Faire en sorte que l'en-tête reste visible
 un lien vers le fichier de base
 l'éditeur
+{x] date de mise à jour des données (fondées sur la date du fichier)
